--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,3 +11,13 @@
   align-items: center;
   margin-top: 20px;
 }
+
+.alinhar-linha{
+  display: flex;
+  justify-content: center;
+}
+
+ion-icon{
+  height: 25px;
+  width: 25px;
+}
