--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,8 +13,8 @@
 }
 
 .alinhar-linha{
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: start
 }
 
 ion-icon{
