removido cor dos buttons e removido informações do menu lateral

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,27 +10,27 @@
 <ion-content>  
   <ion-row class="alinhar-linha">
     <ion-col size="2" >
-      <ion-button expand="full" color="primary" (click)="switchMode('draw')">
+      <ion-button expand="full" (click)="switchMode('draw')">
         <ion-icon name="create-outline"></ion-icon>
       </ion-button>
     </ion-col> 
     <ion-col size="2">
-      <ion-button expand="full" color="secondary" (click)="switchMode('select')">
+      <ion-button expand="full" (click)="switchMode('select')">
         <ion-icon name="checkbox-outline"></ion-icon>
       </ion-button>
     </ion-col> 
     <!-- <ion-col size="2">
-      <ion-button expand="full" color="tertiary" (click)="switchMode('zoom')">
+      <ion-button expand="full" (click)="switchMode('zoom')">
         <ion-icon name="resize-outline"></ion-icon>
       </ion-button>
     </ion-col>  -->
     <ion-col size="2">
-      <ion-button expand="full" color="success" (click)="switchMode('text')">
+      <ion-button expand="full" (click)="switchMode('text')">
         <ion-icon name="text-outline"></ion-icon>
       </ion-button>
     </ion-col> 
     <ion-col size="2">
-      <ion-button expand="full" color="danger" (click)="switchMode('erase')">
+      <ion-button expand="full" (click)="switchMode('erase')">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-button>
     </ion-col> 
@@ -38,32 +38,32 @@
   </ion-row>
   <ion-row class="alinhar-linha">
     <ion-col size="2">
-      <ion-button expand="full" color="warning" (click)="switchMode('circle')">
+      <ion-button expand="full" (click)="switchMode('circle')">
         <ion-icon name="ellipse-outline"></ion-icon>
       </ion-button>
     </ion-col> 
     <ion-col size="2">
-      <ion-button expand="full" color="primary" (click)="switchMode('rectangle')">
+      <ion-button expand="full" (click)="switchMode('rectangle')">
         <ion-icon name="square-outline"></ion-icon>
       </ion-button>
     </ion-col> 
     <ion-col size="2">
-      <ion-button expand="full" color="secondary" (click)="switchMode('line')">
+      <ion-button expand="full" (click)="switchMode('line')">
         <ion-icon name="remove-outline"></ion-icon>
       </ion-button>
     </ion-col>
     <ion-col size="2">
-      <ion-button expand="full" color="secondary" (click)="addNote()">
+      <ion-button expand="full" (click)="addNote()">
         <ion-icon name="bookmark-outline"></ion-icon>
       </ion-button>
     </ion-col>
     <ion-col size="2">
-      <ion-button expand="full" color="secondary" (click)="switchMode('download')">
+      <ion-button expand="full" (click)="switchMode('download')">
         <ion-icon name="cloud-download-outline"></ion-icon>
       </ion-button>
     </ion-col>
     <ion-col size="2">
-      <ion-button expand="full" color="secondary" (click)="triggerFileInput()">
+      <ion-button expand="full" (click)="triggerFileInput()">
         <ion-icon name="cloud-upload-outline"></ion-icon>
       </ion-button>
       <input #fileInput hidden type="file" (change)="handleImageUpload($event)" accept="image/*">
